@@ -26,6 +26,7 @@ IF (ENABLE_GLES2)
     ADD_DEFINITIONS(-DBLACKBERRY_PLATFORM_GRAPHICS_GLES2=1)
     ADD_DEFINITIONS(-DBLACKBERRY_PLATFORM_GRAPHICS_DRAWING_SURFACE=1)
     ADD_DEFINITIONS(-DBLACKBERRY_PLATFORM_EXPORT_WEBDOM=1)
+    ADD_DEFINITIONS(-DWTF_USE_ARENA_ALLOC_ALIGNMENT_INTEGER=1)
 ENDIF ()
 
 IF (ADDITIONAL_SYSTEM_INCLUDE_PATH)
@@ -49,15 +50,14 @@ ENDIF ()
 ADD_DEFINITIONS(-D__QNXNTO__)
 ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64)
 ADD_DEFINITIONS(-D_LARGEFILE64_SOURCE)
-ADD_DEFINITIONS(-DWTF_USE_LEGACY_VIEWPORT_ADAPTION=1)
 
 # Find a library only in the staging directory (which is the CMAKE_INSTALL_PATH)
 # TODO: CMAKE_INSTALL_PATH may not be staging directory.
 MACRO(FIND_STAGING_LIBRARY _var _libname)
   FIND_LIBRARY(${_var} ${_libname}
-    PATHS "${CMAKE_INSTALL_PREFIX}"
+    PATHS "${CMAKE_LIBRARY_PATH}"
     ENV "QNX_TARGET"
-    PATH_SUFFIXES "${CMAKE_SYSTEM_PROCESSOR}/usr/lib" "${CMAKE_SYSTEM_PROCESSOR}/usr/lib/torch-webkit" "${CMAKE_SYSTEM_PROCESSOR}/lib"
+    PATH_SUFFIXES "${CMAKE_SYSTEM_PROCESSOR}/usr/lib" "${CMAKE_SYSTEM_PROCESSOR}/lib"
     NO_DEFAULT_PATH)
 ENDMACRO()
 
@@ -77,10 +77,6 @@ FIND_STAGING_LIBRARY(INTL_LIBRARY intl)
 FIND_STAGING_LIBRARY(Z_LIBRARY z)
 FIND_STAGING_LIBRARY(CURL_LIBRARY curl)
 FIND_STAGING_LIBRARY(WebKitPlatform_LIBRARY webkitplatform)
-FIND_STAGING_LIBRARY(UUID_LIBRARY uuid-browser)
-FIND_STAGING_LIBRARY(MMR_LIBRARY mmrndclient)
-FIND_STAGING_LIBRARY(PPSCache_LIBRARY ppscache)
-FIND_STAGING_LIBRARY(MD_LIBRARY md)
 FIND_STAGING_LIBRARY(EGL_LIBRARY EGL)
 FIND_STAGING_LIBRARY(GLESv2_LIBRARY GLESv2)
 FIND_STAGING_LIBRARY(HARFBUZZ_LIBRARY harfbuzz)
@@ -88,6 +84,9 @@ FIND_STAGING_LIBRARY(FONTCONFIG_LIBRARY fontconfig)
 FIND_STAGING_LIBRARY(PROFILING_LIBRARY profilingS)
 FIND_STAGING_LIBRARY(LIB_INPUT_UTILITIES input_utilities)
 FIND_STAGING_LIBRARY(OTS_LIBRARY ots)
+FIND_STAGING_LIBRARY(LEVELDB_LIBRARY leveldb)
+FIND_STAGING_LIBRARY(ITYPE_LIBRARY iType)
+FIND_STAGING_LIBRARY(WTLE_LIBRARY WTLE)
 
 # Add "-fPIC" to CMAKE_SHARED_LIBRARY_C_FLAGS and CMAKE_SHARED_LIBRARY_CXX_FLAGS
 # This is because "-fPIC" is not included in the default defines under Modules/Platform/QNX.cmake
@@ -96,9 +95,9 @@ SET(CMAKE_SHARED_LIBRARY_CXX_FLAGS "-fPIC ${CMAKE_SHARED_LIBRARY_CXX_FLAGS}")
 
 # Show unresolved symbols when doing the final shared object link
 IF (PROFILING)
-    SET(BLACKBERRY_LINK_FLAGS "-Wl,-z,defs -Wl,-z,relro -Wl,-E")
+    SET(BLACKBERRY_LINK_FLAGS "-Wl,-z,defs -Wl,-z,relro -Wl,-E -Wl,--no-keep-memory")
 ELSE (PROFILING)
-    SET(BLACKBERRY_LINK_FLAGS "-Wl,-z,defs -Wl,-z,relro")
+    SET(BLACKBERRY_LINK_FLAGS "-Wl,-z,defs -Wl,-z,relro -Wl,--no-keep-memory")
 ENDIF ()
 
 # Set custom CFLAGS for our port
@@ -115,11 +114,13 @@ ENDIF ()
 
 # FIXME: Make this more elegant
 IF (TARGETING_PLAYBOOK)
-    SET(CMAKE_CXX_FLAGS "-mfpu=vfpv3 -mthumb -mthumb-interwork ${CMAKE_CXX_FLAGS}")
-    SET(CMAKE_C_FLAGS "-mfpu=vfpv3 -mthumb -mthumb-interwork ${CMAKE_C_FLAGS}")
+    SET(CMAKE_CXX_FLAGS "-mfpu=neon ${CMAKE_CXX_FLAGS}")
+    SET(CMAKE_C_FLAGS "-mfpu=neon ${CMAKE_C_FLAGS}")
+    SET(CMAKE_CXX_FLAGS "-mthumb -mthumb-interwork ${CMAKE_CXX_FLAGS}")
+    SET(CMAKE_C_FLAGS "-mthumb -mthumb-interwork ${CMAKE_C_FLAGS}")
 ENDIF ()
 
-ADD_DEFINITIONS(-DRESOURCE_PATH="/usr/share/webkit-owb/resources/")
+ADD_DEFINITIONS(-DRESOURCE_PATH="/usr/share/webkit/resources/")
 INCLUDE_DIRECTORIES(${CMAKE_INCLUDE_PATH})
 
 SET(JSC_EXECUTABLE_NAME jsc)
@@ -136,21 +137,24 @@ WEBKIT_OPTION_DEFINE(ENABLE_EVENT_MODE_METATAGS "Enable meta-tag touch and mouse
 WEBKIT_OPTION_DEFINE(ENABLE_VIEWPORT_REFLOW "Enable viewport reflow" ON)
 
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_ANIMATION_API ON)
-WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_ASSEMBLER_WX_EXCLUSIVE ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_BATTERY_STATUS ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_BLOB ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_CUSTOM_SCHEME_HANDLER ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_DEVICE_ORIENTATION ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_DRAG_SUPPORT OFF)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_DOWNLOAD_ATTRIBUTE ON)
+WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_FAST_MOBILE_SCROLLING ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_FILE_SYSTEM ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_FILTERS ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_FULLSCREEN_API ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_GEOLOCATION ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_IMAGE_DECODER_DOWN_SAMPLING ON)
+WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_INDEXED_DATABASE ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_INPUT_TYPE_COLOR ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_LEGACY_NOTIFICATIONS ON)
+WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_LEGACY_VIEWPORT_ADAPTION ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_LLINT ON)
+WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_MEDIA_CAPTURE ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_MEDIA_STREAM ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_MICRODATA ON)
 WEBKIT_OPTION_DEFAULT_PORT_VALUE(ENABLE_NAVIGATOR_CONTENT_UTILS ON)
