@@ -1,3 +1,14 @@
+2012-10-04  Rob Buis  <rbuis@rim.com>
+
+        [BlackBerry] Sync up CMake files
+        https://bugs.webkit.org/show_bug.cgi?id=98442
+
+        Reviewed by Gyuyoung Kim.
+
+        Amongst others some internal paths changed.
+
+        * Source/cmake/OptionsBlackBerry.cmake:
+
 2012-10-04  Christophe Dumez  <christophe.dumez@intel.com>
 
         [EFL] Add libxml 2.8.0 to jhbuild
